@@ -9,6 +9,8 @@
   list admin view.
 * Adjusted the toolbar javascript template to escape values coming from the request.
 * Added Dropdown class to toolbar items
+* Replaced all custom markup on the ``admin/cms/page/includes/fieldset.html`` template
+  with an ``{% include %}`` call to Django's builtin ``fieldset.html`` template.
 
 
 === 3.4.2 (2017-01-23) ===
